include summary statistics for numerical variables

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,4 +17,4 @@ import(xml2)
 import(haven)
 importFrom("readr", "read_csv", "write_csv", "format_csv")
 importFrom("utils", "capture.output", "file_test", "read.csv", "packageVersion")
-importFrom("stats", "na.omit")
+importFrom("stats", "median", "sd", "na.omit")
