--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: DDIwR
 Version: 0.3
-Date: 2018-09-27
+Date: 2019-01-06
 Title: DDI with R
 Authors@R: c(person("Adrian", "Dusa", role = c("aut", "cre"),
                       email = "dusa.adrian@unibuc.ro"))
 Depends: R (>= 3.3.0)
-Imports: xml2, haven, readr
+Imports: xml2, haven, readr, tibble
 Description: Useful functions for various DDI (Data Documentation Initiative) related inputs and outputs.
 License: GPL (>= 2)
