--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(checkType,
        writeRlist)
 import(xml2)
 import(haven)
+importFrom("tibble", "as_tibble")
 importFrom("readr", "read_csv", "write_csv", "format_csv")
-importFrom("utils", "capture.output", "file_test", "read.csv", "packageVersion")
+importFrom("utils", "capture.output", "file_test", "read.csv", "write.csv", "packageVersion")
 importFrom("stats", "median", "sd", "na.omit")
