--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: DDIwR
 Version: 0.3
-Date: 2019-01-06
+Date: 2019-04-18
 Title: DDI with R
 Authors@R: c(person("Adrian", "Dusa", role = c("aut", "cre"),
                       email = "dusa.adrian@unibuc.ro"))
 Depends: R (>= 3.3.0)
-Imports: xml2, haven, readr, tibble
+Imports: admisc, haven, readr, tibble, xml2
 Description: Useful functions for various DDI (Data Documentation Initiative) related inputs and outputs.
 License: GPL (>= 2)
