updated to the latest version

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,18 +1,19 @@
-export(checkType,
-       convertibble,
-       exportDDI,
-       setupfile,
-       splitrows,
-       treatPath,
-       getDecimals,
-       getDelimiter,
-       getEnter,
-       getFiles,
-       getMetadata,
-       getXML,
-       tibbleMetadata,
-       transfer,
-       writeRlist)
+export( checkType,
+        convert,
+        convertibble,
+        exportDDI,
+        setupfile,
+        splitrows,
+        treatPath,
+        getDecimals,
+        getDelimiter,
+        getEnter,
+        getFiles,
+        getFormat,
+        getMetadata,
+        getXML,
+        tibbleMetadata,
+        writeRlist)
 import(xml2)
 import(haven)
 importFrom("tibble", "as_tibble")
