--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
-.Rproj.user
-.Rhistory
-.RData
-.Ruserdata
-.DS_Store
+*.js~
+*.marks
+*.history
+*.o
+*.so
+*.Rproj.user
+*.Rhistory
+*.RData
+*.Ruserdata
+*.DS_Store
