--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,3 +20,4 @@ importFrom("tibble", "as_tibble")
 importFrom("readr", "read_csv", "write_csv", "format_csv")
 importFrom("utils", "capture.output", "file_test", "read.csv", "write.csv", "packageVersion")
 importFrom("stats", "median", "sd", "na.omit")
+importFrom("tools", "file_ext")
