--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,14 @@
 Package: DDIwR
-Version: 0.4
-Date: 2019-09-14
+Version: 0.5
+Date: 2020-05-09
 Title: DDI with R
-Authors@R: c(person("Adrian", "Dusa", role = c("aut", "cre"),
-                      email = "dusa.adrian@unibuc.ro"))
-Depends: R (>= 3.3.0)
-Imports: admisc (>= 0.4), haven, readr, tibble, xml2
+Authors@R: person(given = "Adrian", family = "Dusa",
+                  role = c("aut", "cre", "cph"),
+                  email = "dusa.adrian@unibuc.ro",
+                  comment = c(ORCID = "0000-0002-3525-9253"))
+Depends: R (>= 3.5.0)
+Imports: admisc (>= 0.12), haven, readr, tibble, tools, xml2
 Description: Useful functions for various DDI (Data Documentation Initiative) related inputs and outputs.
 License: GPL (>= 2)
+URL: https://github.com/dusadrian/DDIwR
+BugReports: https://github.com/dusadrian/DDIwR/issues
