--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: DDIwR
-Version: 0.5
-Date: 2020-05-09
+Version: 0.5-5
+Date: 2021-04-12
 Title: DDI with R
 Authors@R: person(given = "Adrian", family = "Dusa",
                   role = c("aut", "cre", "cph"),
                   email = "dusa.adrian@unibuc.ro",
                   comment = c(ORCID = "0000-0002-3525-9253"))
 Depends: R (>= 3.5.0)
-Imports: admisc (>= 0.12), haven, readr, tibble, tools, xml2
+Imports: admisc (>= 0.12), haven, readr, labelled, tibble, tools, xml2
 Description: Useful functions for various DDI (Data Documentation Initiative) related inputs and outputs.
 License: GPL (>= 2)
 URL: https://github.com/dusadrian/DDIwR
