--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,8 @@ export(
 import(xml2)
 import(haven)
 import(declared)
+import(readxl)
+import(writexl)
 importFrom("readr", "read_csv", "write_csv", "format_csv")
 importFrom("utils", "capture.output", "file_test", "read.csv", "write.csv", "packageVersion")
 importFrom("stats", "median", "sd", "na.omit")
