--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: DDIwR
-Version: 0.5-5
+Version: 0.6
 Date: 2021-06-23
 Title: DDI with R
 Authors@R: person(given = "Adrian", family = "Dusa",
