--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: DDIwR
-Version: 0.7
+Version: 0.7-5
 Date: 2021-08-19
 Title: DDI with R
 Authors@R: person(given = "Adrian", family = "Dusa",
