--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,7 +16,7 @@ export(
     getMetadata,
     getXML,
     make_labelled,
-    recodeMissing,
+    recodeValues,
     writeMetadata,
     writeRlist
 )
