--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: DDIwR
-Version: 0.10
+Version: 0.10-5
 Date: 2022-04-20
 Title: DDI with R
 Authors@R: person(given = "Adrian", family = "Dusa",
