dot minor dev version

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: DDIwR
-Version: 0.11-3
+Version: 0.11.3
 Date: 2022-05-20
 Title: DDI with R
 Authors@R: person(given = "Adrian", family = "Dusa",
