--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,3 +1,9 @@
-﻿^\.travis\.yml$
+^DDIwR\.Rproj$
+^\.Rproj\.user$
+^LICENSE\.md$
+^_pkgdown\.yml$
+^docs$
+^pkgdown$
+^README\.Rmd$
+^\.travis\.yml$
 images/
-README.md
