more documentation with Roxygen2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,10 @@ importFrom(haven,write_sav)
 importFrom(haven,write_xpt)
 importFrom(readxl,read_excel)
 importFrom(tools,file_ext)
+importFrom(utils,file_test)
+importFrom(utils,packageVersion)
+importFrom(utils,read.csv)
+importFrom(utils,write.table)
 importFrom(writexl,write_xlsx)
 importFrom(xml2,as_list)
 importFrom(xml2,read_xml)
