--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: DDIwR
 Title: DDI with R
-Version: 0.12.4
+Version: 0.13
 Authors@R: person(
     "Adrian", "Dusa",
     email = "dusa.adrian@unibuc.ro",
@@ -10,11 +10,8 @@ URL: https://github.com/dusadrian/DDIwR
 BugReports: https://github.com/dusadrian/DDIwR/issues
 Description: Useful functions for various DDI (Data Documentation Initiative)
     related inputs and outputs. Converts data files to and from DDI, SPSS, Stata,
-    SAS, R and Excel, including user declared missing values.
+    SAS, R and Excel, including (recoded) user declared missing values.
 License: GPL (>= 3)
-Encoding: UTF-8
-Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.1
 Depends: R (>= 3.5.0)
 Imports:
     admisc (> 0.28),
@@ -29,6 +26,9 @@ Suggests:
     labelled,
     rmarkdown,
     spelling,
+    testthat (>= 3.0.0),
     tibble
-VignetteBuilder: knitr
 Language: en-US
+Encoding: UTF-8
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.2.1
