--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,8 @@ importFrom(admisc,stopError)
 importFrom(admisc,trimstr)
 importFrom(admisc,tryCatchWEM)
 importFrom(admisc,wholeNumeric)
+importFrom(base64enc,base64decode)
+importFrom(base64enc,base64encode)
 importFrom(declared,as.declared)
 importFrom(declared,as.haven)
 importFrom(declared,declared)
