up minor version

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: DDIwR
 Title: DDI with R
-Version: 0.16
+Version: 0.16.1
 Authors@R: person(
     "Adrian", "Dusa",
     email = "dusa.adrian@unibuc.ro",
@@ -15,6 +15,7 @@ License: GPL (>= 3)
 Depends: R (>= 3.5.0)
 Imports:
     admisc (>= 0.32),
+    base64enc,
     declared (>= 0.22),
     tools,
     xml2,
