--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,6 +67,7 @@ importFrom(haven,write_sav)
 importFrom(haven,write_xpt)
 importFrom(readxl,read_excel)
 importFrom(tools,file_ext)
+importFrom(utils,capture.output)
 importFrom(utils,file_test)
 importFrom(utils,packageVersion)
 importFrom(utils,read.csv)
