--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,29 +2,61 @@
 
 S3method(print,lineage)
 S3method(print,validation)
+export(XMLvariables)
 export(addAttributes)
 export(addChildren)
 export(addContent)
 export(anyAttributes)
 export(anyChildren)
+export(appendInfo)
 export(changeAttributes)
 export(changeContent)
+export(checkArgument)
+export(checkDots)
+export(checkElement)
+export(checkExisting)
+export(checkType)
+export(checkXMList)
+export(checkvarFormat)
+export(cleanup)
+export(collectMetadata)
 export(convert)
+export(datanotes)
 export(exportDDI)
+export(formatExample)
 export(fromXMList)
+export(generateID)
 export(getChildren)
+export(getDNS)
+export(getDateTime)
+export(getDelimiter)
+export(getEnter)
+export(getFiles)
+export(getFormat)
 export(getMetadata)
+export(getValues)
+export(getVariables)
+export(getXML)
 export(globalAttributes)
 export(hasAttributes)
 export(hasChildren)
+export(hasLabels)
+export(hasMissingLabels)
 export(indexChildren)
 export(makeCategories)
 export(makeElement)
+export(makeLabelled)
+export(missingValuesSPSS)
+export(prespace)
 export(recodeCharcat)
 export(recodeMissings)
 export(removeAttributes)
 export(removeChildren)
 export(removeContent)
+export(removeXMLang)
+export(repeatSpace)
+export(replaceChars)
+export(replaceTicks)
 export(setupfile)
 export(showAttributes)
 export(showDescription)
@@ -32,8 +64,12 @@ export(showDetails)
 export(showExamples)
 export(showLineages)
 export(showRelations)
+export(splitrows)
 export(testValid)
 export(toXMList)
+export(treatPath)
+export(writeMetadata)
+export(writeRlist)
 importFrom(admisc,anyTagged)
 importFrom(admisc,asNumeric)
 importFrom(admisc,getName)
