using a similar structure to as_list()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,7 @@ export(addChildren)
 export(addContent)
 export(anyAttributes)
 export(anyChildren)
-export(appendInfo)
+export(ascii)
 export(changeAttributes)
 export(changeContent)
 export(checkArgument)
@@ -17,14 +17,14 @@ export(checkElement)
 export(checkExisting)
 export(checkType)
 export(checkXMList)
-export(checkvarFormat)
 export(cleanup)
+export(coerceDDI)
 export(collectMetadata)
 export(convert)
 export(datanotes)
 export(exportDDI)
+export(extractData)
 export(formatExample)
-export(fromXMList)
 export(generateID)
 export(getChildren)
 export(getDNS)
@@ -35,7 +35,6 @@ export(getFiles)
 export(getFormat)
 export(getMetadata)
 export(getValues)
-export(getVariables)
 export(getXML)
 export(globalAttributes)
 export(hasAttributes)
@@ -53,6 +52,7 @@ export(recodeMissings)
 export(removeAttributes)
 export(removeChildren)
 export(removeContent)
+export(removeExtra)
 export(removeXMLang)
 export(repeatSpace)
 export(replaceChars)
@@ -66,7 +66,6 @@ export(showLineages)
 export(showRelations)
 export(splitrows)
 export(testValid)
-export(toXMList)
 export(treatPath)
 export(writeMetadata)
 export(writeRlist)
