--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(checkXMList)
 export(cleanup)
 export(coerceDDI)
 export(collectMetadata)
+export(collectRMetadata)
 export(convert)
 export(datanotes)
 export(exportDDI)
