new function makeNotes()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,7 +22,6 @@ export(coerceDDI)
 export(collectMetadata)
 export(collectRMetadata)
 export(convert)
-export(datanotes)
 export(exportDDI)
 export(extractData)
 export(formatExample)
@@ -46,6 +45,7 @@ export(indexChildren)
 export(makeCategories)
 export(makeElement)
 export(makeLabelled)
+export(makeNotes)
 export(missingValuesSPSS)
 export(prespace)
 export(recodeCharcat)
