new function updateCodebook()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,6 +68,7 @@ export(showRelations)
 export(splitrows)
 export(testValid)
 export(treatPath)
+export(updateCodebook)
 export(writeMetadata)
 export(writeRlist)
 importFrom(admisc,anyTagged)
