removeXMLang renamed to changeXMLang

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(anyChildren)
 export(ascii)
 export(changeAttributes)
 export(changeContent)
+export(changeXMLang)
 export(checkArgument)
 export(checkDots)
 export(checkElement)
@@ -54,7 +55,6 @@ export(removeAttributes)
 export(removeChildren)
 export(removeContent)
 export(removeExtra)
-export(removeXMLang)
 export(repeatSpace)
 export(replaceChars)
 export(replaceTicks)
