--- a/NAMESPACE
+++ b/NAMESPACE
@@ -87,6 +87,7 @@ importFrom(declared,as.haven)
 importFrom(declared,declared)
 importFrom(declared,is.declared)
 importFrom(declared,undeclare)
+importFrom(digest,digest)
 importFrom(haven,is.labelled)
 importFrom(haven,is_tagged_na)
 importFrom(haven,labelled)
