modify variable attributes if different in the XML

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,7 @@
 
 S3method(print,lineage)
 S3method(print,validation)
-export(XMLvariables)
+export(XMLtoRmetadata)
 export(addAttributes)
 export(addChildren)
 export(addContent)
@@ -34,6 +34,7 @@ export(getDelimiter)
 export(getEnter)
 export(getFiles)
 export(getFormat)
+export(getHashes)
 export(getMetadata)
 export(getValues)
 export(getXML)
