new function searchFor()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ export(removeExtra)
 export(repeatSpace)
 export(replaceChars)
 export(replaceTicks)
+export(searchFor)
 export(setupfile)
 export(showAttributes)
 export(showDescription)
