--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ export(hasLabels)
 export(hasMissingLabels)
 export(indexChildren)
 export(makeCategories)
+export(makeDataNotes)
 export(makeElement)
 export(makeLabelled)
 export(makeNotes)
