renamed updateCodebook with updateDDI

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,6 +72,8 @@ export(splitrows)
 export(testValid)
 export(treatPath)
 export(updateCodebook)
+export(updateDDI)
+export(updateSchema)
 export(writeMetadata)
 export(writeRlist)
 importFrom(admisc,anyTagged)
