new / renamed functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,11 +23,13 @@ export(coerceDDI)
 export(collectMetadata)
 export(collectRMetadata)
 export(convert)
+export(exportCodebook)
 export(exportDDI)
 export(extractData)
 export(formatExample)
 export(generateID)
 export(getChildren)
+export(getCodebook)
 export(getDNS)
 export(getDateTime)
 export(getDelimiter)
@@ -72,7 +74,6 @@ export(splitrows)
 export(testValid)
 export(treatPath)
 export(updateCodebook)
-export(updateDDI)
 export(updateSchema)
 export(writeMetadata)
 export(writeRlist)
