--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,11 +47,13 @@ export(hasLabels)
 export(hasMissingLabels)
 export(indexChildren)
 export(makeCategories)
+export(makeDDITree)
 export(makeDataNotes)
 export(makeElement)
 export(makeLabelled)
 export(makeNotes)
 export(missingValuesSPSS)
+export(normalizeRepeatedSiblings)
 export(prespace)
 export(recodeCharcat)
 export(recodeMissings)
