--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(getDNS)
 export(getDateTime)
 export(getDelimiter)
 export(getEnter)
+export(getEnv)
 export(getFiles)
 export(getFormat)
 export(getHashes)
@@ -47,7 +48,6 @@ export(hasLabels)
 export(hasMissingLabels)
 export(indexChildren)
 export(makeCategories)
-export(makeDDITree)
 export(makeDataNotes)
 export(makeElement)
 export(makeLabelled)
