new internal function to import from Excel

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ export(hasAttributes)
 export(hasChildren)
 export(hasLabels)
 export(hasMissingLabels)
+export(import_excel)
 export(indexChildren)
 export(makeCategories)
 export(makeDataNotes)
