new convenience functions makePath, moveChild and replaceChild

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,7 +53,9 @@ export(makeDataNotes)
 export(makeElement)
 export(makeLabelled)
 export(makeNotes)
+export(makePath)
 export(missingValuesSPSS)
+export(moveChild)
 export(prespace)
 export(recodeCharcat)
 export(recodeMissings)
@@ -63,6 +65,7 @@ export(removeContent)
 export(removeExtra)
 export(repeatSpace)
 export(replaceChars)
+export(replaceChild)
 export(replaceTicks)
 export(searchFor)
 export(setupfile)
