up minor version

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -131,3 +131,4 @@ importFrom(xml2,xml_find_first)
 importFrom(xml2,xml_name)
 importFrom(xml2,xml_ns)
 importFrom(xml2,xml_text)
+useDynLib(DDIwR, .registration = TRUE)
